[project]
name = "dream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations",
    "future",
    "gdown>=6.0.0",
    "matplotlib",
    "numpy>=2.4.4",
    "opencv-python",
    "pandas",
    "pillow",
    "pyrr",
    "pytest",
    "ruamel-yaml>=0.19.1",
    "scipy",
    "seaborn",
    "tensorboardx",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm",
    "wandb",
    "webcolors",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dream*"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
